--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^18.0.6",
     "express": "^4.18.2",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.1"
   }
 }
