--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.1",
